tests/invalid/numbers/missing_paren.rs
/*
compilationExitCode: 2
*/

main(: i64 {
    return 0;
}